--- a/app/views/feed/_icon.html.erb
+++ b/app/views/feed/_icon.html.erb
@@ -1,15 +1,15 @@
-<% if category == 'Violence'%>
-  <%= image_tag 'violence.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
-<% elsif category == 'Harassment' %>
-  <%= image_tag 'harassment.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
-<% elsif category == 'Drugs' %>
-  <%= image_tag 'drugs.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
-<% elsif category == 'Traffic' %>
-  <%= image_tag 'traffic.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
-<% elsif category == 'Theft' %>
-  <%= image_tag 'theft.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
-<% elsif category == 'Disturb' %>
-  <%= image_tag 'disturb.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
-<% elsif category == 'Arson' %>
-  <%= image_tag 'arson.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
+<% if category == "Violence"%>
+  <%= image_tag "violence.png", style: "width: 35px; height: 35px;", class: "ms-1" %>
+<% elsif category == "Harassment" %>
+  <%= image_tag "harassment.png", style: "width: 35px; height: 35px;", class: "ms-1" %>
+<% elsif category == "Drugs" %>
+  <%= image_tag "drugs.png", style: "width: 35px; height: 35px;", class: "ms-1" %>
+<% elsif category == "Traffic" %>
+  <%= image_tag "traffic.png", style: "width: 35px; height: 35px;", class: "ms-1" %>
+<% elsif category == "Theft" %>
+  <%= image_tag "theft.png", style: "width: 35px; height: 35px;", class: "ms-1" %>
+<% elsif category == "Disturb" %>
+  <%= image_tag "disturb.png", style: "width: 35px; height: 35px;", class: "ms-1" %>
+<% elsif category == "Arson" %>
+  <%= image_tag "arson.png", style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% end %>
