--- a/app/views/incidents/_distance_icon.html.erb
+++ b/app/views/incidents/_distance_icon.html.erb
@@ -1,4 +1,4 @@
-<% if distance == 'Unknown'%>
+<% if distance == "Unknown"%>
   <i class="fas fa-question me-2" style="font-size: 18px; color: gray;"></i>
 <% elsif distance < 5 %>
   <i class="fas fa-map-marker-alt me-2" style="font-size: 18px; color: #db4444;"></i>
