--- a/app/views/incidents/_incident_back_button.html.erb
+++ b/app/views/incidents/_incident_back_button.html.erb
@@ -1,4 +1,4 @@
 <%= link_to request.referer do %>
-  <i class='fas fa-chevron-left me-2'></i>
+  <i class="fas fa-chevron-left me-2"></i>
   Back
 <% end %>
