--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -24,6 +24,6 @@
     </div>
   <% end %>
   <div class="map-container">
-    <%= render 'shared/map' %>
+    <%= render "shared/map" %>
   </div>
 </div>
