--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
-    <%= render 'shared/flashes' %>
+    <%= render "shared/flashes" %>
     <main class="main">
       <%= yield %>
     </main>
