--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -17,9 +17,9 @@
     </div>
   </div>
   <% @original_comment.comments.each do |comment| %>
-    <%= render "reply_card", comment: comment %>
+    <%= render "comments/reply_card", comment: comment %>
   <% end %>
 </div>
 <div class="form--comments d-flex justify-content-center">
-    <%= render 'form', incident: @original_comment.incident, original_comment: @original_comment, comment: @comment %>
+    <%= render "comments/form", incident: @original_comment.incident, original_comment: @original_comment, comment: @comment %>
 </div>
