--- a/app/views/feed/_distance.html.erb
+++ b/app/views/feed/_distance.html.erb
@@ -2,12 +2,12 @@
   <% if request.location.latitude.present? %>
     <% distance = (Geocoder::Calculations.distance_between([request.location.latitude, request.location.longitude], [incident.latitude, incident.longitude])).round(0) %>
   <% elsif incident.latitude.nil? %>
-    <% distance = 'Unknown' %>
+    <% distance = "Unknown" %>
   <% else %>
     <% distance = (Geocoder::Calculations.distance_between([35.6415, 139.6981], [incident.latitude, incident.longitude])).round(0) %>
   <% end %>
   <p>
-    <%= render 'incidents/distance_icon.html.erb', distance: distance %>
+    <%= render "incidents/distance_icon.html.erb", distance: distance %>
     <%= distance %>
     km away from you
   </p>
