--- a/app/views/incidents/_category.html.erb
+++ b/app/views/incidents/_category.html.erb
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-end align-items-center card--category">
-  <% if incident.category_list.first == 'Disturb' %>
+  <% if incident.category_list.first == "Disturb" %>
     Disturbing the peace
   <% else %>
     <%= incident.category_list.first %>
   <% end %>
-  <%= render 'icon', category: incident.category_list.first %>
+  <%= render "incidents/icon", category: incident.category_list.first %>
 </div>
