--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -1,8 +1,8 @@
 <div class="p-3">
   <div class="row align-items-start">
-    <%= render "type", incident: @incident %>
+    <%= render "incidents/type", incident: @incident %>
     <div class="col-3">
-      <%= render "category", incident: @incident %>
+      <%= render "incidents/category", incident: @incident %>
     </div>
     <h1><%= @incident.title %></h1>
   </div>
@@ -11,6 +11,6 @@
     <%= link_to "Taken from #{@incident.source} <i class='fas fa-external-link-alt ms-1'></i>".html_safe, @incident.url, target: '_blank' %>
   <% end %>
   <div class="d-flex justify-content-between align-items-end mt-2">
-    <%= render 'incident_card_bottom', incident: @incident  %>
+    <%= render "incidents/incident_card_bottom", incident: @incident  %>
   </div>
 </div>
