--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -9,7 +9,7 @@
     data-read-more-less-text-value="See less"
   >
     <h5 class="text--gray text--roboto"><em>My Reports:</em></h5>
-    <%= render 'incidents', user: @user %>
+    <%= render "profile/incidents", user: @user %>
   </div>
   <div
     class="profile__comments"
@@ -18,7 +18,7 @@
     data-read-more-less-text-value="See less"
   >
     <h5 class="text--gray text--roboto"><em>My Comments:</em></h5>
-    <%= render 'comments', user: @user %>
+    <%= render "profile/comments", user: @user %>
   </div>
   <%= link_to destroy_user_session_path, method: :delete do%>
     <div class="button--logout">
