--- a/app/views/feed/_feed_incidents.html.erb
+++ b/app/views/feed/_feed_incidents.html.erb
@@ -1,4 +1,4 @@
-<div class="feed__incidents" data-active-button-target="feed">
+<div class="feed__incidents" data-active-button-target="feed" data-filter-target="list">
   <% @incidents.each do |incident| %>
     <%= render 'feed_card.html.erb', incident: incident %>
   <% end %>
