--- a/app/views/profile/_incident_card.html.erb
+++ b/app/views/profile/_incident_card.html.erb
@@ -14,10 +14,10 @@
       <h1><%= incident.title %></h1>
     </div>
     <div class="col-2">
-      <%= render "feed/icon", category: incident.category_list.first %>
+      <%= render "feed/feed_icon.html.erb", category: incident.category_list.first %>
     </div>
   </div>
   <p class="card--description"><%= incident.description.first(100)... %></p>
-  <%= render "feed/distance", incident: incident %>
+  <%= render "feed/feed_distance.html.erb", incident: incident %>
   <%= link_to "", incident_path(incident, path: "feed"), class: "card--link" %>
 </div>
