--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -9,7 +9,7 @@
     z-index: 100;
     width: 90%;
     left: 5%;
-    border-radius: 1rem;
+    border-radius: 50px;
 
     &.open {
       bottom: 8.5rem;
