--- a/app/views/components/_date_picker.html.erb
+++ b/app/views/components/_date_picker.html.erb
@@ -17,7 +17,7 @@
       data: {
         controller: "flatpickr",
         flatpickr_alt_input: "true",
-        flatpickr_date_format: "m-d",
+        flatpickr_date_format: "Y-m-d",
         flatpickr_alt_format: "M J",
         flatpickr_disable_mobile: "true", # Prevents native picker on mobile
         flatpickr_default_date: params[:end_date].present? ? params[:start_date] : "today",
