--- a/app/views/components/_date_picker.html.erb
+++ b/app/views/components/_date_picker.html.erb
@@ -4,6 +4,7 @@
     <%= text_field_tag :start_date, params[:start_date],
       class: "date-picker__input",
       data: {
+        active_button_target: "startDate",
         controller: "flatpickr",
         flatpickr_alt_input: "true",
         flatpickr_date_format: "Y-m-d",
@@ -15,9 +16,10 @@
     <%= text_field_tag :end_date, params[:end_date],
       class: "date-picker__input",
       data: {
+        active_button_target: "endDate",
         controller: "flatpickr",
         flatpickr_alt_input: "true",
-        flatpickr_date_format: "m-d",
+        flatpickr_date_format: "Y-m-d",
         flatpickr_alt_format: "M J",
         flatpickr_disable_mobile: "true", # Prevents native picker on mobile
         flatpickr_default_date: params[:end_date].present? ? params[:start_date] : "today",
