--- a/app/assets/stylesheets/pages/feed/_index.scss
+++ b/app/assets/stylesheets/pages/feed/_index.scss
@@ -61,7 +61,9 @@
     padding-top: 0.5rem;
     letter-spacing: 1px;
     font-weight: 400;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 
     i {
       transition: $transition;
