--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -2,47 +2,17 @@
   "name": "NeighborHUD",
   "description": "A service that aggregates the latest crime news and detects recent trends based on your GPS location. Users can self-report their own incidents.",
   "short_name": "NeighborHUD",
+  "display": "fullscreen",
   "start_url": "/",
   "icons": [
-    {
-      "src": "<%= asset_path("/assets/favicon/android-icon-36x36") %>",
-      "sizes": "36x36",
-      "type": "image/png",
-      "density": "0.75"
-    },
-    {
-      "src": "<%= asset_path("/assets/favicon/android-icon-48x48") %>",
-      "sizes": "48x48",
-      "type": "image/png",
-      "density": "1.0"
-    },
-    {
-      "src": "<%= asset_path("/assets/favicon/android-icon-72x72") %>",
-      "sizes": "72x72",
-      "type": "image/png",
-      "density": "1.5"
-    },
-    {
-      "src": "<%= asset_path("/assets/favicon/android-icon-96x96") %>",
-      "sizes": "96x96",
-      "type": "image/png",
-      "density": "2.0"
-    },
-    {
-      "src": "<%= asset_path("/assets/favicon/android-icon-144x144") %>",
-      "sizes": "144x144",
-      "type": "image/png",
-      "density": "3.0"
-    },
-    {
-      "src": "<%= asset_path("/assets/favicon/android-icon-192x192") %>",
-      "sizes": "192x192",
-      "type": "image/png",
-      "density": "4.0"
-    }
-    ],
-  "theme_color": "#000000",
-  "background_color": "#FFFFFF",
-  "display": "fullscreen",
-  "orientation": "portrait"
+    <% files = Dir.entries(Rails.root.join("app/assets/images/icons/")).select {|f| !File.directory? f} %>
+    <% files.each_with_index do |file, index| %>
+      <% match = file.match(/.+-(?<size>\d{2,3}x\d{2,3}).png/) %>
+      {
+        "src": "<%= image_path "icons/#{file}" %>",
+        "sizes": "<%= match && match[:size] %>",
+        "type": "image/png"
+      }<%= "," unless (files.size - 1) == index %>
+    <% end %>
+  ]
 }
