--- a/app/assets/stylesheets/pages/feed/_index.scss
+++ b/app/assets/stylesheets/pages/feed/_index.scss
@@ -4,18 +4,6 @@
   overflow: scroll;
   transition: 1s;
 
-  &__buttons-container {
-    margin-top: 0;
-    padding: 0 0.5em 0 0.5em;
-    margin-bottom: 0.7em;
-    display: flex;
-    gap: 0.4em;
-
-    .top_container__button {
-      width: 100%;
-    }
-  }
-
   &.open {
     display: grid;
     // grid-template-rows: auto calc(100vh - 390px) auto;
@@ -42,6 +30,12 @@
     }
   }
 
+  &__button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
   &__incidents {
     height: calc(100vh - 271px);
     display: flex;
@@ -61,9 +55,7 @@
     padding-top: 0.5rem;
     letter-spacing: 1px;
     font-weight: 400;
-    display: flex;
-    justify-content: center;
-    width: 100%;
+    text-align: center;
 
     i {
       transition: $transition;
