added text so it shows that there are no results for your search

--- a/app/assets/stylesheets/pages/feed/_index.scss
+++ b/app/assets/stylesheets/pages/feed/_index.scss
@@ -44,6 +44,12 @@
     }
   }
 
+  .text--gray {
+    color: rgb(107, 107, 107);
+    font-size: 18px;
+    margin: 1em;
+  }
+
   &__incidents {
     height: calc(100vh - 271px);
     display: flex;
