--- a/app/views/feed/_search.html.erb
+++ b/app/views/feed/_search.html.erb
@@ -1,6 +1,6 @@
 <div class="form--search d-flex justify-content-center">
   <%= form_tag feed_path, method: :get do %>
-  <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Enter a location", value: params[:query]%>
+  <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Enter a location", value: params[:query], data: { 'active-button-target': 'search'} %>
   <%= submit_tag "Search", style: "display: none;"%>
   <% end %>
 </div>
