--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{@original_comment.user.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, @original_comment.content %>
+<%# <% content_for :meta_image, cl_image_path(@offer.photo.path) %>
 <div class="container p-3">
   <div class="d-flex justify-content-start link--incident-details">
     <%= link_to "<p style='margin-bottom: 0; padding-bottom:0;'><i class='fas fa-chevron-left me-2'></i>Back</p>".html_safe, incident_path(@original_comment.incident) %>
@@ -21,5 +24,5 @@
   <% end %>
 </div>
 <div class="form--comments d-flex justify-content-center">
-    <%= render "comments/form", incident: @original_comment.incident, original_comment: @original_comment, comment: @comment %>
+  <%= render "comments/form", incident: @original_comment.incident, original_comment: @original_comment, comment: @comment %>
 </div>
