--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{@incident.title} is on #{DEFAULT_META["meta_product_name"]}" %>
+<%# <% content_for :meta_description, @incident.description %>
+<%# <% content_for :meta_image, cl_image_path(@offer.photo.path) %>
 <div class="incident-show">
   <div class="incident-show__top">
     <div class="link--incident-details">
