HTML setup - Views (profile/show)

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{@user.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<%# <% content_for :meta_description, @incident.description %>
+<%# <% content_for :meta_image, cl_image_path(@offer.photo.path) %>
 <div class="profile-show p-3">
   <div class="d-flex justify-content-center border-bottom">
     <h1>My <span class="text--blue">Activity</span></h1>
