--- a/app/views/feed/_feed_card.html.erb
+++ b/app/views/feed/_feed_card.html.erb
@@ -1,4 +1,3 @@
-    
 <div class="card--feed me-1 ms-1 p-3">
   <% if incident.user == current_user && current_page?("/profile") %>
     <div class="button--delete">
@@ -14,7 +13,7 @@
       <% end %>
       <h1><%= incident.title %></h1>
     </div>
-    <div class="col-2">
+    <div class="col-2 d-flex justify-content-end">
       <%= render "feed/feed_icon.html.erb", category: incident.category_list.first %>
     </div>
   </div>
