--- a/app/views/components/_date_picker.html.erb
+++ b/app/views/components/_date_picker.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="date open">
   <%= form_tag path, method: :get, class:"date-picker" do |f| %>
     <%= label :start_date, "Incidents from: " %>
     <%= text_field_tag :start_date, params[:start_date],
