--- a/app/assets/stylesheets/pages/home/_top_container.scss
+++ b/app/assets/stylesheets/pages/home/_top_container.scss
@@ -54,3 +54,11 @@
     }
   }
 }
+
+@media only screen and (min-width: 768px) {
+  .top_container {
+    &__buttons-container {
+      width: 92%;
+    }
+  }
+}
