uniform text size on route and my activity page

--- a/app/assets/stylesheets/pages/profile/index.scss
+++ b/app/assets/stylesheets/pages/profile/index.scss
@@ -5,7 +5,7 @@
   color: rgb(240, 240, 240);
 
   h1 {
-    font-size: calc(1.3rem + 3vw);
+    font-size: 32px;
   }
 
   .text--roboto {
@@ -33,15 +33,4 @@
   width: 100%;
   justify-content: center;
   margin-top: 1em;
-}
-
-@media only screen and (min-width: 1200px) {
-  .profile__container {
-    display: flex;
-    justify-content: center;
-
-    .profile-show {
-      max-width: 840px;
-    }
-  }
 }
